# mcp

./: .gitignore  AGENTS.md  BEST_PRACTICES.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  joist.toml  nx.json  oci_sdk_method_classification.txt  package-lock.json  package.json  requirements-dev.txt  requirements.txt  ruff.toml  tox.ini
src/common/: LICENSE.txt  README.md  pyproject.toml
src/common/oracle/: __init__.py
src/common/oracle/mcp_common/: __init__.py  helpers.py
src/common/oracle_mcp_common/: __init__.py  auth.py
src/common/oracle_mcp_common/tests/: test_auth.py
src/mcp-atlassian-oauth/: LICENSE  README.md  REMOTE_SERVER_SETUP.md  SETUP.md  mcp.json  pyproject.toml  requirements-ops.txt
src/mcp-atlassian-oauth/examples/: .env.example  cline_mcp_settings.json  python_client.py  uri_examples.md
src/mcp-atlassian-oauth/src/mcp_atlassian_oauth/: __init__.py  __main__.py  auth.py  config.py  http.py  server.py  ws_server.py
src/mcp-atlassian-oauth/tests/: test_resources.py  test_smoke.py
src/mcp-atlassian-oauth/tools/: dev_install.sh  install.sh  run_local.sh
src/mysql-mcp-server/: README.md  mysql_mcp_server.py  pyproject.toml  requirements.txt  test_mysql_mcp_server.py
src/mysql-mcp-server/oracle/mysql_mcp_server/: __init__.py  consts.py  server.py  utils.py
src/oci-ag-mcp-server/: .env.example  README.md  pyproject.toml
src/oci-ag-mcp-server/examples/: ag_mcp_test_client.py
src/oci-ag-mcp-server/oracle/oci_ag_mcp_server/: __init__.py  ag_client.py  auth.py  consts.py  models.py  server.py
src/oci-cloud-guard-mcp-server/: CHANGELOG.md  Containerfile  Dockerfile  README.md  project.json  pyproject.toml
src/oci-cloud-guard-mcp-server/oracle/oci_cloud_guard_mcp_server/: __init__.py  models.py  server.py
src/oci-cloud-mcp-server/: CHANGELOG.md  Containerfile  README.md  project.json  pyproject.toml
src/oci-cloud-mcp-server/oracle/: __init__.py
src/oci-cloud-mcp-server/oracle/oci_cloud_mcp_server/: __init__.py  server.py  utils.py
src/oci-data-science-mcp-server/: README.md  pyproject.toml
src/oci-data-science-mcp-server/oracle/: __init__.py
src/oci-database-mcp-server/: CHANGELOG.md  README.md  project.json  pyproject.toml
src/oci-db-dynamic-mcp-server/: README.md  pyproject.toml
src/oci-document-understanding-mcp-server/: CHANGELOG.md  README.md  pyproject.toml
src/oci-faaas-mcp-server/: README.md  project.json  pyproject.toml
src/oci-full-stack-disaster-recovery-mcp-server/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/oci-full-stack-disaster-recovery-mcp-server/tests/: test_auth.py  test_models.py  test_server.py
src/oci-iot-mcp-server/: README.md  project.json  pyproject.toml
src/oci-kafka-mcp-server/: .env.oci.example  README.md  pyproject.toml
src/oci-limits-mcp-server/: Dockerfile  README.md  oci_limits_mcp_server.py  project.json  pyproject.toml  requirements.txt  test_oci_limits_mcp_server.py
src/oci-limits-mcp-server/oci_limits_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oci-load-balancer-mcp-server/: CHANGELOG.md  README.md  project.json  pyproject.toml
src/oci-load-balancer-mcp-server/spec/: LoadBalancingApi.yaml  LoadBalancingApi2.yaml
src/oci-logging-mcp-server/: CHANGELOG.md  Containerfile  Dockerfile  README.md  project.json  pyproject.toml
src/oci-opensearch-mcp-server/: .containerignore  Containerfile  README.md  project.json  pyproject.toml
src/oci-oracle-db-observability-mcp-server/: LICENSE.txt  README.md  pyproject.toml
src/oci-pricing-mcp-server/: .dockerignore  .gitignore  Dockerfile  README.md  oci-pricing-mcp-server.py  pyproject.toml  test_oci_pricing_mcp_server.py
src/oci-pricing-mcp-server/oci_pricing_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/oci-recovery-mcp-server/: CHANGELOG.md  README.md  project.json  pyproject.toml
src/oci-recovery-mcp-server/oracle/: __init__.py
src/oci-resource-search-mcp-server/: CHANGELOG.md  Containerfile  Dockerfile  README.md  project.json  pyproject.toml
src/oci-support-mcp-server/: CHANGELOG.md  README.md  project.json  pyproject.toml
src/oci-usage-mcp-server/: CHANGELOG.md  Containerfile  Dockerfile  README.md  project.json  pyproject.toml
src/oci-vision-mcp-server/: .containerignore  CHANGELOG.md  Containerfile  README.md  pyproject.toml
src/oci-vision-mcp-server/oracle/: __init__.py
src/oracle-data-studio-mcp-server/: .gitignore  CHANGELOG.md  Containerfile  LICENSE.txt  README.md  pyproject.toml
src/oracle-data-studio-mcp-server/oracle/: __init__.py
src/oracle-db-doc-mcp-server/: .gitignore  Dockerfile  README.md  fastmcp.json  oracle-db-doc-mcp-server.py  pyproject.toml  requirements.txt
src/oracle-goldengate-mcp-server/: .gitignore  MANIFEST.in  README.md  oracle-goldengate-mcp-server.env.example  project.json  pyproject.toml  run_goldengate_mcp_server_linux.sh  run_goldengate_mcp_server_macos.sh  run_goldengate_mcp_server_windows.bat
src/oracle-goldengate-mcp-server/docs/: createExtract.md  createReplicat.md
src/oracle-oci-mcp-auth-provider/: CHANGELOG.md  README.md  pyproject.toml
src/oracle-oci-mcp-auth-provider/oracle_oci_mcp_auth_provider/: __init__.py  providers.py
src/oracle-oci-mcp-auth-provider/tests/: test_providers.py
tests/: README.md  project.json  pyproject.toml
tests/e2e/features/: .env.template  environment.py  general-prompts.feature  mcphost-jms.json  mcphost.json  oci-cloud-guard-mcp-server.feature  oci-compute-instance-agent-mcp-server.feature  oci-compute-mcp-server.feature  oci-faaas-mcp-server.feature  oci-identity-mcp-server.feature  oci-iot-mcp-server.feature  oci-jms-mcp-server.feature  oci-load-balancer-mcp-server.feature  oci-logging-mcp-server.feature  oci-migration-mcp-server.feature  oci-monitoring-mcp-server.feature  oci-network-load-balancer-mcp-server.feature  oci-networking-mcp-server.feature  oci-object-storage-mcp-server.feature  oci-registry-mcp-server.feature  oci-resource-search-mcp-server.feature  oci-usage-mcp-server.feature
(+810 files in other folders)
