[project]
name = "oracle.oci-e2e-tests"
version = "0.1.2"
description = "OCI MCP Servers e2e tests"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
dependencies = [
    "fastmcp==2.13.0",
    "oci-cli==3.71.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=6.1.1",
    "pytest-cov>=7.0.0",
    "behave>=1.2.6"
]
