[project]
name = "oracle.oci-e2e-tests"
version = "0.1.3"
description = "OCI MCP Servers e2e tests"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
dependencies = [
    "behave>=1.2.6",
    "fastmcp==2.14.2",
    "oci==2.160.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=6.1.1",
    "pytest-cov>=7.0.0",
]
