[project]
name = "oracle.oci-e2e-tests"
version = "0.1.3"
description = "OCI MCP Servers e2e tests"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
dependencies = [
    "behave>=1.2.6",
    "fastmcp==3.2.4",
    "oci==2.171.0",
    "flask>=3.1.3",
    "cryptography>=46.0.7",
    "ollama-mcp-bridge>=0.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=6.1.1",
    "pytest-cov>=7.0.0",
]

[tool.uv]
# ollama-mcp-bridge pins FastAPI below the release line that allows patched Starlette.
override-dependencies = [
    "starlette>=0.49.1,<0.50",
]
