[project]
name = "mcp-common"
version = "0.1.0"
description = "Shared utilities for Oracle MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "oci==2.160.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "**/tests/*",
]
precision = 2
fail_under = 90
