[project]
name = "oracle.mysql-mcp-server"
version = "1.0.6"
description = "MySql Service MCP server"
readme = "README.md"
requires-python = ">=3.12"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]

dependencies = [
    "fastmcp==3.2.4",
    "mysql-connector-python==9.5.0",
    "oci==2.173.1"
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.mysql_mcp_server" = "oracle.mysql_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]
