[project]
name = "oracle.oci-data-science-mcp-server"
version = "0.1.0"
description = "OCI Data Science MCP Server"
readme = "README.md"
requires-python = ">=3.12"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "oci>=2.161.0",
    "oracle-ads[opctl]>=2.13.20",
    "pandas>=2.3.3",
    "starlette>=0.48.0",
]

classifiers = [
    "License :: OSI Approved :: Universal Permissive License (UPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
"oracle.oci-data-science-mcp-server" = "oracle.oci_data_science_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
