[project]
name = "oracle.oci-database-mcp-server"
version = "1.1.0"
description = "OCI Database Service MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==3.4.2",
    "oci==2.179.0",
    "mcp>=1.27.0",
    "oracle-mcp-common>=0.1.0,<0.2.0",
    "pytest-cov>=7.0.0",
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-database-mcp-server" = "oracle.oci_database_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]

[tool.uv.sources]
oracle-mcp-common = { workspace = true }

[tool.uv.workspace]
members = [
    "../common",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
precision = 2
fail_under = 90
