[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle.oci-document-understanding-mcp-server"
version = "0.1.0"
description = "Stdio MCP server for OCI Document Understanding workflows."
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==3.4.2",
    "oci==2.179.0",
    "pydantic==2.12.3",
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-document-understanding-mcp-server" = "oracle.oci_document_understanding_mcp_server.server:main"

[project.urls]
Changelog = "https://github.com/oracle/mcp/blob/main/src/oci-document-understanding-mcp-server/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["oracle/oci_document_understanding_mcp_server/tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/__main__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "**/__main__.py",
    "**/tests/*",
]
precision = 2
fail_under = 90
