[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle.oci-fsdr-mcp-server"
version = "0.2.1"
description = "OCI Full Stack Disaster Recovery MCP Server"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Universal Permissive License v 1.0" }
license-files = ["LICENSE.txt"]
keywords = ["oci", "oracle", "disaster-recovery", "mcp", "fsdr"]
dependencies = [
    "fastmcp==3.4.2",
    "oci>=2.179.0",
    "pydantic>=2.0.0",
]

[project.scripts]
"oracle.oci-fsdr-mcp-server" = "oracle.oci_fsdr_mcp_server.server:main"
oci-fsdr-mcp = "oracle.oci_fsdr_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "tests/*",
]
precision = 2
fail_under = 90
