[project]
name = "oracle.oci-iot-mcp-server"
version = "1.0.0"
description = "OCI IoT Platform MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==3.2.4",
    "oci>=2.171.0",
    "pydantic>=2.5.0",
    "httpx>=0.28.1",
]

classifiers = [
    "License :: OSI Approved :: Universal Permissive License (UPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-iot-mcp-server" = "oracle.oci_iot_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = ["**/__init__.py", "**/tests/*", "dist/*", ".venv/*"]

[tool.coverage.report]
precision = 2
fail_under = 90
