[project]
name = "oracle.oci-limits-mcp-server"
version = "1.0.3"
description = "OCI Limits MCP server"
readme = "README.md"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.13"
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==3.2.4",
    "oci==2.173.1"
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-limits-mcp-server" = "oracle.oci_limits_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]

[tool.hatch.build.targets.sdist]
exclude = ["uv.lock", ".gitignore", ".containerignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.1"
]
