[project]
name = "oracle.oci-logging-mcp-server"
version = "2.0.1"
description = "OCI Logging Service MCP server"
readme = "README.md"
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.13"
dependencies = [
    "fastmcp==3.2.4",
    "oci==2.173.1",
    "pydantic==2.12.3",
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-logging-mcp-server" = "oracle.oci_logging_mcp_server.server:main"

[project.urls]
Changelog = "https://github.com/oracle/mcp/blob/main/src/oci-logging-mcp-server/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]

[tool.hatch.build.targets.sdist]
exclude = ["uv.lock", ".gitignore", ".containerignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "**/tests/*",
]
precision = 2
fail_under = 90
