[project]
name = "oracle.oracle-db-observability"
version = "1.0.0"
description = "Oracle Database Observability MCP servers"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==3.2.4",
    "oci==2.174.0",
    "pydantic==2.12.3",
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-opsi-mcp-server" = "oracle.oci_oracle_db_observability.v1.oci_opsi_mcp_server.server:main"
"oracle.oci-dbm-mcp-server" = "oracle.oci_oracle_db_observability.v1.oci_dbm_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle", "generation"]
exclude = ["/oracle/**/tests/**", "/generation/**/tests/**"]

[dependency-groups]
dev = [
    "openapi-pydantic>=0.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "**/tests/*",
]
precision = 2
fail_under = 90
