[project]
name = "oci-pricing-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0.0", "httpx>=0.27.0"]

[project.scripts]
oci-pricing-mcp = "oci_pricing_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oci_pricing_mcp*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
ignore = []
fix = true
