[project]
name = "oracle.oci-recovery-mcp-server"
version = "2.0.0"
description = "OCI Recovery Service MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
dependencies = [
    "fastmcp==2.14.7",
    "oci==2.171.0",
    "pydantic==2.12.3",
    "mcp>=1.27.0",
    "pytest-cov>=7.0.0",
]

classifiers = [
    "License :: OSI Approved :: Universal Permissive License (UPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-recovery-mcp-server" = "oracle.oci_recovery_mcp_server.server:main"

[project.urls]
Changelog = "https://github.com/oracle/mcp/blob/main/src/oci-recovery-mcp-server/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
]
