[project]
name = "oracle.oci-usage-mcp-server"
version = "2.0.0"
description = "OCI Usage MCP server"
readme = "README.md"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp==3.2.4",
    "oci==2.173.1",
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.oci-usage-mcp-server" = "oracle.oci_usage_mcp_server.server:main"

[project.urls]
Changelog = "https://github.com/oracle/mcp/blob/main/src/oci-usage-mcp-server/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
exclude = ["/oracle/**/tests/**"]

[tool.hatch.build.targets.sdist]
exclude = ["uv.lock", ".gitignore", ".containerignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
precision = 2
fail_under = 90
