[project]
name = "oracle.data-studio-mcp-server"
version = "1.0.0"
description = "Oracle Data Studio MCP server — Essbase, ADP (Autonomous Database Data Platform), and Data Transforms with Oracle 23ai annotation-aware query routing"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle Data Studio", email = "essbase_grp_ww@oracle.com"},
]
dependencies = [
    "fastmcp==3.2.4",
    "oracle-data-studio>=1.0.26",
    "pydantic==2.12.3",
    "keyring>=25.0.0",
]
classifiers = [
    "License :: OSI Approved :: Universal Permissive License (UPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"oracle.data-studio-mcp-server" = "oracle.data_studio_mcp_server.server:main"
"oracle.data-studio-config" = "oracle.data_studio_mcp_server.cli_config:main"

[project.urls]
Changelog = "https://github.com/oracle/mcp/blob/main/src/oracle-data-studio-mcp-server/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["oracle/data_studio_mcp_server/tests"]

[tool.coverage.run]
source = ["oracle/data_studio_mcp_server"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
